force-app/main/default/objects/Account_Wallet__c/Account_Wallet__c.object-meta.xml
<CustomObject>
    <description>Wallet object stores all the financial instruments associated with the account like banks, cards, paypal credit and so on.</description>
    <label>Account Wallet</label>
    <nameField>
        <label>Account Wallet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Wallet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>