force-app/main/default/objects/Account_Wallet__c/fields/Card_Network__c.field-meta.xml
<CustomField>
    <fullName>Card_Network__c</fullName>
    <description>Card Network - Visa/Mastercard/Amex/Discover/etc.,</description>
    <inlineHelpText>Card Network - Visa/Mastercard/Amex/Discover/etc.,</inlineHelpText>
    <label>Card Network</label>
    <length>64</length>
    <type>Text</type>
</CustomField>