force-app/main/default/objects/Account_Wallet__c/fields/Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Status__c</fullName>
    <description>Confirmation status of the financial instrument</description>
    <inlineHelpText>Confirmation status of the financial instrument</inlineHelpText>
    <label>Confirmation Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>