force-app/main/default/objects/Account_Wallet__c/fields/Credit_Limit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Amount__c</fullName>
    <description>Total credit limit for PayPal Credit product</description>
    <inlineHelpText>Total credit limit for PayPal Credit product</inlineHelpText>
    <label>Credit Limit Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>