force-app/main/default/objects/Account_Wallet__c/fields/Credit_Limit_Currency__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Currency__c</fullName>
    <description>Credit Limit Currency Code</description>
    <inlineHelpText>Credit Limit Currency Code</inlineHelpText>
    <label>Credit Limit Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>