force-app/main/default/objects/Account_Wallet__c/fields/Credit_Usage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Usage_Amount__c</fullName>
    <description>Amount of PayPal credit used by the customer</description>
    <inlineHelpText>Amount of PayPal credit used by the customer</inlineHelpText>
    <label>Credit Usage Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>