force-app/main/default/objects/Account_Wallet__c/fields/Credit_Usage_Currency__c.field-meta.xml
<CustomField>
    <fullName>Credit_Usage_Currency__c</fullName>
    <description>Currency code for the PayPal credit usage</description>
    <inlineHelpText>Currency code for the PayPal credit usage</inlineHelpText>
    <label>Credit Usage Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>