force-app/main/default/objects/Account_Wallet__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Customer Name on File. This could be same or different than the one used in the profile/account.</description>
    <inlineHelpText>Customer Name on File.</inlineHelpText>
    <label>Customer Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>