force-app/main/default/objects/Account_Wallet__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Expiry Date for the card or any other applicable financial instrument</description>
    <inlineHelpText>Expiry Date for the card or any other applicable financial instrument</inlineHelpText>
    <label>Expiry Date</label>
    <type>DateTime</type>
</CustomField>