force-app/main/default/objects/Account_Wallet__c/fields/Financial_Instrument_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Financial_Instrument_Subtype__c</fullName>
    <description>Financial Instrument Subtype - For card it could be Credit/Debit, For bank it could be checking/saving and so on.</description>
    <inlineHelpText>Financial Instrument Subtype - For card it could be Credit/Debit, For bank it could be checking/saving and so on.</inlineHelpText>
    <label>Financial Instrument Subtype</label>
    <length>64</length>
    <type>Text</type>
</CustomField>