force-app/main/default/objects/Account_Wallet__c/fields/Financial_Instrument_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_Instrument_Type__c</fullName>
    <description>Financial Instrument Type - like Card/Bank/etc.,</description>
    <inlineHelpText>Financial Instrument Type - like Card/Bank/etc.,</inlineHelpText>
    <label>Financial Instrument Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>