force-app/main/default/objects/Account_Wallet__c/fields/Issuer_Name__c.field-meta.xml
<CustomField>
    <fullName>Issuer_Name__c</fullName>
    <description>Issuer Name for Card/Bank, etc.,</description>
    <inlineHelpText>Issuer Name for Card/Bank, etc.,</inlineHelpText>
    <label>Issuer Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>