force-app/main/default/objects/Account_Wallet__c/fields/Last_4_digits__c.field-meta.xml
<CustomField>
    <fullName>Last_4_digits__c</fullName>
    <description>Last 4 digits of the card/bank account number/etc.,</description>
    <inlineHelpText>Last 4 digits of the card/bank account number/etc.,</inlineHelpText>
    <label>Last 4 digits</label>
    <length>16</length>
    <type>Text</type>
</CustomField>