force-app/main/default/objects/Account_Wallet__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <description>Card Art, Bank Logo, etc.,</description>
    <inlineHelpText>Card Art, Bank Logo, etc.,</inlineHelpText>
    <label>Logo URL</label>
    <length>1028</length>
    <type>LongTextArea</type>
</CustomField>