force-app/main/default/objects/Account_Wallet__c/fields/Wallet_Id__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Id__c</fullName>
    <description>Unique identifier for the corresponding financial instrument</description>
    <inlineHelpText>Unique identifier for the corresponding financial instrument</inlineHelpText>
    <label>Wallet Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>